# backtesting

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/backtesting/: __init__.py  asset.py  currency.py  ledger.py  pandas_units.py  portfolio.py  record_objects.py  support.py  trading_strategy.py
src/backtesting/portfolio/: asset.py  currency.py  ledger.py  portfolio.py  record_objects.py  support.py
src/backtesting/strategy/: strategy.py
src/backtesting/trading_strategy/: __init__.py  record_objects.py  trading_strategy.py
tutorial/: draft.ipynb  portfolio_introduction.ipynb
