[build-system]
requires = ["setuptools>=61.0", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "backtesting"
version = "0.1.0"
description = "Set of tools to simulate and evaluate trading strategies by applying it to historical market data to assess its past performance."
authors = [
    { name = "Didac Cristobal", email = "didac.crst@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

dependencies = [
    "setuptools",
    "toml"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]
packages = ["backtesting"]
package-dir = {"" = "src"}